objects/APTS_MSPA_Progress_Stage__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Chevron_Value_Progress_Status__c</fullName>
        <label>Chevron Value - Progress Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Value__c</fullName>
        <label>Default Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Progress_Status__c</fullName>
        <label>Progress Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sorting_Value_Progress_Status__c</fullName>
        <label>Sorting Value - Progress Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>APTS MSPA Progress Stage</label>
</CustomObject>